easy `Request failed with status code 504 simulation`

--- a/nginx.conf
+++ b/nginx.conf
@@ -23,6 +23,15 @@ http {
             # proxy_set_header Keep-Alive "";
             # proxy_set_header Proxy-Connection "keep-alive";
             proxy_pass http://trustify;
+
+            # Max time nginx will wait to establish a connection with the backend
+            proxy_connect_timeout 60s;
+            # Max time nginx will wait to send data to the backend (headers or request body)
+            proxy_send_timeout 60s;
+            # Maxi time nginx will wait to receive data from the backend (the response)
+            proxy_read_timeout 1s;
+            # Max time nginx will wait to send data to the client (browser)
+            send_timeout 60s;
         }
     }
 }
